--- a/_posts/2017-06-19-个人博客.md
+++ b/_posts/2017-06-19-个人博客.md
@@ -3,24 +3,28 @@ layout: post
 title: "Jekyll 搭建个人博客"
 date: 2017-06-19
 description: "用Jekyll搭建自己的新博客"
-tag: 博客 
----   
+tag: 博客 Jekyll
+---
 
 　　工作至今反反复复搭建过好多次博客，有不同的原因导致博客都没有长久继续下去。每次搭建博客都志气满满，选择开源程序，选择样式，挑选插件，每次都希望能尽善尽美。原本写博客也有督促自己保持学习，但每次都没有坚持下去。
-    这次希望博客更加纯粹，计划着写一些学习系列，帮助自己，也帮助他人！这次把精力全放在技术本身，所以用了github + Markdown作为博客的载体。
 
-    通过Markdown编写文章，不用再为排版花费心思，本地进行文章编写，直接git提交到github就完成了博客发布，想想就觉得自己是个合格的程序员！~有没有！~
-    github官方推荐Jekyll，基本能满足我博客的需求，在网上找到这款样式直接拿来使用了，谢谢作者！页面底部有该样式的github链接，喜欢的朋友也可以支持下。
+　　这次希望博客更加纯粹，计划着写一些学习系列，帮助自己，也帮助他人！这次把精力全放在技术本身，所以用了github + Markdown作为博客的载体。
 
-    本人原来的博客内容会慢慢的转移过来，为了提升自己的能力，也会重新编辑文章，让别人也能看得懂！是时候进步了-_-!
-    文章的内容不局限在遇到的问题，会将相关的知识点都进行整理，也算是对自己知识的一次梳理。
+## 博客工具：
+　　Markdown：通过Markdown编写文章，不用再为排版花费心思，本地进行文章编写，直接git提交到github就完成了博客发布，想想就觉得自己是个合格的程序员！~有没有！~
+　　Jekyll：github官方推荐Jekyll，基本能满足我博客的需求，在网上找到这款样式直接拿来使用了，谢谢作者！页面底部有该样式的github链接，喜欢的朋友也可以支持下。
+　　网易云跟帖：博客评论不用数据库了，也不用管理垃圾评论，选择了网易云跟帖，同类产品也有畅言、有言
+　　不蒜子：博客页面访问量不用数据库统计了，用了不蒜子，很方便简单
 
-    自己闲暇时间开发的程序，也希望有更多的人能使用，能反馈，会针对自己的项目进行使用说明。
-    
+　　本人原来的博客内容会慢慢的转移过来，为了提升自己的能力，也会重新编辑文章，让别人也能看得懂！是时候进步了-_-!
+　　文章的内容不局限在遇到的问题，会将相关的知识点都进行整理，也算是对自己知识的一次梳理。
+
+　　自己闲暇时间开发的程序，也希望有更多的人能使用，能反馈，会针对自己的项目进行使用说明。
+
 > Blog的内容
->  | - - 系列文章：算法，大数据，VR/AR
->  | - - 工具使用：一些项目的最佳实践，和自己的使用心得
->  | - - 开源项目：主要是自己的项目
+> 	| - - 系列文章：算法，大数据，VR/AR
+> 	| - - 工具使用：一些项目的最佳实践，和自己的使用心得
+> 	| - - 开源项目：主要是自己的项目
 
-    原先博客：[你的努力](http://www.ueffort.com/)
-    开源项目：[github](http://github.com/ueffort/)
+　　原先博客：[你的努力](http://www.ueffort.com/)
+　　开源项目：[github](http://github.com/ueffort/)
