--- a/_posts/2017-06-19-个人博客.md
+++ b/_posts/2017-06-19-个人博客.md
@@ -20,6 +20,8 @@ tag: 博客 Jekyll
 　　不蒜子：博客页面访问量不用数据库统计了，用了不蒜子，很方便简单
 
 　　本人原来的博客内容会慢慢的转移过来，为了提升自己的能力，也会重新编辑文章，让别人也能看得懂！是时候进步了-_-!
+
+## 博客内容：
 　　文章的内容不局限在遇到的问题，会将相关的知识点都进行整理，也算是对自己知识的一次梳理。
 
 　　自己闲暇时间开发的程序，也希望有更多的人能使用，能反馈，会针对自己的项目进行使用说明。
