--- a/_posts/2017-06-19-个人博客.md
+++ b/_posts/2017-06-19-个人博客.md
@@ -3,7 +3,7 @@ layout: post
 title: "Jekyll 搭建个人博客"
 date: 2017-06-19
 description: "用Jekyll搭建自己的新博客"
-tag: 博客 Jekyll
+tag: 博客, Jekyll
 ---
 
 　　工作至今反反复复搭建过好多次博客，有不同的原因导致博客都没有长久继续下去。每次搭建博客都志气满满，选择开源程序，选择样式，挑选插件，每次都希望能尽善尽美。原本写博客也有督促自己保持学习，但每次都没有坚持下去。
