--- a/_posts/2017-06-20-剑指Offer.md
+++ b/_posts/2017-06-20-剑指Offer.md
@@ -10,3 +10,10 @@ tags: 算法 剑指Offer
 ## 目录：
 ---
 * [二维数组中的查找](/2017/06/二维数组中的查找/)
+* [替换空格](/2017/06/替换空格/)
+* [从尾到头打印链表](/2017/06/从尾到头打印链表/)
+* [重建二叉树](/2017/06/重建二叉树/)
+* [用两个栈实现队列](/2017/06/用两个栈实现队列/)
+* [旋转数组的最小数字](/2017/06/旋转数组的最小数字/)
+* [斐波那契数列](/2017/06/斐波那契数列/)
+* [跳台阶](/2017/06/跳台阶/)
