--- a/_posts/2017-06-20-剑指Offer.md
+++ b/_posts/2017-06-20-剑指Offer.md
@@ -17,3 +17,4 @@ tags: 算法 剑指Offer
 * [旋转数组的最小数字](/2017/06/旋转数组的最小数字/)
 * [斐波那契数列](/2017/06/斐波那契数列/)
 * [跳台阶](/2017/06/跳台阶/)
+* [变态跳台阶](/2017/06/变态跳台阶/)
