--- a/_posts/2017-06-20-剑指Offer.md
+++ b/_posts/2017-06-20-剑指Offer.md
@@ -18,3 +18,6 @@ tags: 算法 剑指Offer
 * [斐波那契数列](/2017/06/斐波那契数列/)
 * [跳台阶](/2017/06/跳台阶/)
 * [变态跳台阶](/2017/06/变态跳台阶/)
+* [矩形覆盖](/2017/06/矩形覆盖/)
+* [二进制中1的个数](/2017/06/二进制中1的个数/)
+* [数值的整数次方](/2017/07/数值的整数次方/)
