--- a/_posts/2017-06-20-剑指Offer.md
+++ b/_posts/2017-06-20-剑指Offer.md
@@ -21,3 +21,4 @@ tags: 算法 剑指Offer
 * [矩形覆盖](/2017/06/矩形覆盖/)
 * [二进制中1的个数](/2017/06/二进制中1的个数/)
 * [数值的整数次方](/2017/07/数值的整数次方/)
+* [调整数组顺序使奇数位于偶数前面](/2017/07/调整数组顺序使奇数位于偶数前面/)
