--- a/_posts/2017-06-20-剑指Offer.md
+++ b/_posts/2017-06-20-剑指Offer.md
@@ -20,5 +20,6 @@ tags: 算法 剑指Offer
 * [变态跳台阶](/2017/06/变态跳台阶/)
 * [矩形覆盖](/2017/06/矩形覆盖/)
 * [二进制中1的个数](/2017/06/二进制中1的个数/)
-* [数值的整数次方](/2017/07/数值的整数次方/)
+* [数值的整数次方](/2017/07/数值的整数次方/)链表中倒数第k个结点
 * [调整数组顺序使奇数位于偶数前面](/2017/07/调整数组顺序使奇数位于偶数前面/)
+* [链表中倒数第k个结点](/2017/07/链表中倒数第k个结点/)
