--- a/_posts/2017-07-03-ARKit初体验.md
+++ b/_posts/2017-07-03-ARKit初体验.md
@@ -1,18 +1,21 @@
 ---
 layout: post
 title: "ARKit初体验"
-date: 2017-06-28
+date: 2017-07-03
 description: "ARKit简介 - ARKit"
 tags: AR
 ---
 
 # 进入ARKit
-## ARKit简介：    
-    1. 增强现实技术（Augmented Reality，简称 AR），是一种现实与虚拟世界融合的技术。它的形式多种多样，ARkit所表现的是一种实时地计算摄影机影像的位置及角度并加上相应图像、视频、3D模型的技术，这种技术的目标是在屏幕上把虚拟世界套在现实世界并进行互动。
+## ARKit简介：
+### 增强现实技术：
+增强现实技术（Augmented Reality，简称 AR），是一种现实与虚拟世界融合的技术。它的形式多种多样，ARkit所表现的是一种实时地计算摄影机影像的位置及角度并加上相应图像、视频、3D模型的技术，这种技术的目标是在屏幕上把虚拟世界套在现实世界并进行互动。
 
-    2. ARKit是2017年6月6日，苹果发布iOS11系统所新增框架,它能够帮助我们以最简单快捷的方式实现AR技术功能。
+### 发布：
+ARKit是2017年6月6日，苹果发布iOS11系统所新增框架,它能够帮助我们以最简单快捷的方式实现AR技术功能。
 
-    3. ARKit基于传感器技术实现动态物体的6轴（6DOF）变化：the three rotation axes (roll, pitch, and yaw), and three translation axes (movement in x, y, and z)（在制作3D游戏时，一个物体的运动由方向和坐标构成），ARKit就能实现相机本身的运动追踪。将用户的行为完美的融合进虚拟世界。
+### 关键：
+ARKit基于传感器技术实现动态物体的6轴（6DOF）变化：the three rotation axes (roll, pitch, and yaw), and three translation axes (movement in x, y, and z)（在制作3D游戏时，一个物体的运动由方向和坐标构成），ARKit就能实现相机本身的运动追踪。将用户的行为完美的融合进虚拟世界。
     
 ## ARKit概述及特点介绍：  
 * 官方文档：[https://developer.apple.com/documentation/arkit](https://developer.apple.com/documentation/arkit)
