--- a/_posts/2017-06-20-剑指Offer.md
+++ b/_posts/2017-06-20-剑指Offer.md
@@ -23,3 +23,6 @@ tags: 算法 剑指Offer
 * [数值的整数次方](/2017/07/数值的整数次方/)链表中倒数第k个结点
 * [调整数组顺序使奇数位于偶数前面](/2017/07/调整数组顺序使奇数位于偶数前面/)
 * [链表中倒数第k个结点](/2017/07/链表中倒数第k个结点/)
+* [反转链表](/2017/07/反转链表/)
+* [合并两个排序的链表](/2017/07/合并两个排序的链表/)
+* [树的子结构](/2017/07/树的子结构/)
