--- a/_posts/2017-07-06-ARKit基础.md
+++ b/_posts/2017-07-06-ARKit基础.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "ARKit初体验"
-date: 2017-07-03
-description: "ARKit初体验 - ARKit"
+title: "ARKit基础"
+date: 2017-07-06
+description: "ARKit基础 - ARKit"
 tags: AR
 ---
 
