--- a/_posts/2017-06-20-剑指Offer.md
+++ b/_posts/2017-06-20-剑指Offer.md
@@ -26,3 +26,51 @@ tags: 算法 剑指Offer
 * [反转链表](/2017/07/反转链表/)
 * [合并两个排序的链表](/2017/07/合并两个排序的链表/)
 * [树的子结构](/2017/07/树的子结构/)
+* [二叉树的镜像](/2017/07/二叉树的镜像/)
+* [顺时针打印矩阵](/2017/07/顺时针打印矩阵/)
+* [包含min函数的栈](/2017/07/包含min函数的栈/)
+* [栈的压入、弹出序列](/2017/07/栈的压入、弹出序列/)
+* [从上往下打印二叉树](/2017/07/从上往下打印二叉树/)
+* [二叉搜索树的后序遍历序列](/2017/07/二叉搜索树的后序遍历序列/)
+* [二叉树中和为某一值的路径](/2017/07/二叉树中和为某一值的路径/)
+* [复杂链表的复制](/2017/07/复杂链表的复制/)
+* [二叉搜索树与双向链表](/2017/07/二叉搜索树与双向链表/)
+* [字符串的排列](/2017/07/字符串的排列/)
+* [数组中出现次数超过一半的数字](/2017/07/数组中出现次数超过一半的数字/)
+* [最小的K个数](/2017/07/最小的K个数/)
+* [连续子数组的最大和](/2017/07/连续子数组的最大和/)
+* [整数中1出现的次数](/2017/07/整数中1出现的次数/)
+* [把数组排成最小的数](/2017/07/把数组排成最小的数/)
+* [第一个只出现一次的字符](/2017/07/第一个只出现一次的字符/)
+* [数组中的逆序对](/2017/07/数组中的逆序对/)
+* [两个链表的第一个公共结点](/2017/07/两个链表的第一个公共结点/)
+* [数字在排序数组中出现的次数](/2017/07/数字在排序数组中出现的次数/)
+* [二叉树的深度](/2017/07/二叉树的深度/)
+* [平衡二叉树](/2017/07/平衡二叉树/)
+* [数组中只出现一次的数字](/2017/07/数组中只出现一次的数字/)
+* [和为S的连续正数序列](/2017/07/和为S的连续正数序列/)
+* [和为S的两个数字](/2017/07/和为S的两个数字/)
+* [左旋转字符串](/2017/07/左旋转字符串/)
+* [翻转单词顺序列](/2017/08/翻转单词顺序列/)
+* [扑克牌顺子](/2017/08/扑克牌顺子/)
+* [圆圈中最后剩下的数](/2017/08/圆圈中最后剩下的数/)
+* [求1+2+3+...+n](/2017/08/求1+2+3+...+n/)
+* [不用加减乘除做加法](/2017/08/不用加减乘除做加法/)
+* [把字符串转换成整数](/2017/08/把字符串转换成整数/)
+* [数组中重复的数字](/2017/08/数组中重复的数字/)
+* [构建乘积数组](/2017/08/构建乘积数组/)
+* [正则表达式匹配](/2017/08/正则表达式匹配/)
+* [表示数值的字符串](/2017/08/表示数值的字符串/)
+* [字符流中第一个不重复的字符](/2017/08/字符流中第一个不重复的字符/)
+* [链表中环的入口结点](/2017/08/链表中环的入口结点/)
+* [删除链表中重复的结点](/2017/08/删除链表中重复的结点/)
+* [二叉树的下一个结点](/2017/08/二叉树的下一个结点/)
+* [对称的二叉树](/2017/08/对称的二叉树/)
+* [按之字形顺序打印二叉树](/2017/08/按之字形顺序打印二叉树/)
+* [把二叉树打印成多行](/2017/08/把二叉树打印成多行/)
+* [序列化二叉树](/2017/08/序列化二叉树/)
+* [二叉搜索树的第k个结点](/2017/08/二叉搜索树的第k个结点/)
+* [数据流中的中位数](/2017/08/数据流中的中位数/)
+* [滑动窗口的最大值](/2017/08/滑动窗口的最大值/)
+* [矩阵中的路径](/2017/08/矩阵中的路径/)
+* [机器人的运动范围](/2017/08/机器人的运动范围/)
